.provarCaches/00D410000011HE0EAM/objects/rstkf__glproj__c.object
<CustomObject>
    <customHelpPage>rstkf__objecthelp_glproj</customHelpPage>
    <description>glproj__c</description>
    <fields>
        <fullName>rstkf__TEST_del__c</fullName>
        <defaultValue>true</defaultValue>
        <label>TEST</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__altextid__c</fullName>
        <label>altextid</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__glproj_gldiv__r.rstkf__gldiv_glcmp__r.rstkf__glcmp_cmpno__r.rstk__sycmp_cmpno__c+ &apos;_&apos; + rstkf__glproj_gldiv__r.rstkf__gldiv_sydiv__r.rstk__sydiv_div__c+ &apos;_&apos; + rstkf__glproj_proj__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__glproj_proj__c + &quot;(&quot; + rstkf__glproj_descr__c + &quot;)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glproj_descr__c</fullName>
        <label>Project Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glproj_gldiv__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>GL Division</label>
        <referenceTo>rstkf__gldiv__c</referenceTo>
        <relationshipLabel>Financial Project Master</relationshipLabel>
        <relationshipName>glprojs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glproj_pjproj__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manufacturing Project</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>Financial Project Master</relationshipLabel>
        <relationshipName>glprojs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glproj_proj__c</fullName>
        <label>Project Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__searchindex__c</fullName>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Financial Project Master</label>
    <listViews>
        <fullName>rstkf__RS_Financial_Project_Master</fullName>
        <columns>NAME</columns>
        <columns>rstkf__externalid__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>rstkf__glproj_gldiv__c</columns>
        <columns>rstkf__glproj_proj__c</columns>
        <columns>rstkf__glproj_descr__c</columns>
        <columns>rstkf__glproj_pjproj__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Financial Project Master</label>
    </listViews>
    <listViews>
        <fullName>rstkf__RS_Financial_Project_Master_Filtered</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glproj_gldiv__c</columns>
        <columns>rstkf__glproj_proj__c</columns>
        <columns>rstkf__glproj_descr__c</columns>
        <columns>rstkf__glproj_pjproj__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstkf__glproj_gldiv__c</field>
            <operation>contains</operation>
            <value>west</value>
        </filters>
        <label>Financial Project Master - Filtered</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>sw_Financial_Project_Master</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <columns>rstkf__externalid__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>rstkf__glproj_gldiv__c</columns>
        <columns>rstkf__glproj_proj__c</columns>
        <columns>rstkf__glproj_descr__c</columns>
        <columns>rstkf__glproj_pjproj__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstkf__glproj_gldiv__c</field>
            <operation>startsWith</operation>
            <value>Suru</value>
        </filters>
        <label>sw-Financial Project Master</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Project Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rstkf__gldivisnotmodifiable</fullName>
        <active>true</active>
        <description>GL Division is not modifiable</description>
        <errorConditionFormula>!ISNEW() &amp;&amp;  ISCHANGED( rstkf__glproj_gldiv__c )</errorConditionFormula>
        <errorMessage>GL Division is not modifiable</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__manufprojectisrequiredandnotmodifiable</fullName>
        <active>true</active>
        <description>Manufacturing Project is required and not modifiable</description>
        <errorConditionFormula>ISBLANK( rstkf__glproj_pjproj__c ) ||  ( !ISNEW() &amp;&amp; ISCHANGED( rstkf__glproj_pjproj__c ))</errorConditionFormula>
        <errorMessage>Manufacturing Project is required and not modifiable</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__projnumberisnotmodifiable</fullName>
        <active>true</active>
        <description>Project Number is not modifiable</description>
        <errorConditionFormula>!ISNEW() &amp;&amp;  ISCHANGED( rstkf__glproj_proj__c )</errorConditionFormula>
        <errorMessage>Project Number is not modifiable</errorMessage>
    </validationRules>
</CustomObject>